[package]
name = "worlddat"
version = "0.1.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]
edition = "2018"



[dependencies]
# Core stuff
quinn = "0.5"
# Must be the version that quinn uses
quinn-proto = "0.5"
tokio = {version = "0.2", features = ["rt-core", "rt-threaded", "time"]}
url = "2"
blake2 = "0.8"
base64 = "0.11"
bytemuck = "1"
log = "0.4"
futures = "0.3"
# Must be same version that quinn uses
rustls = {version= "0.16", features = ["dangerous_configuration"]}
# Must be same version that rustls uses
webpki = "0.21"
rcgen = "0.7"

# Serde stuff
serde = "1"
serde_derive = "1"
rmp = "0.8"
rmp-serde = "0.14"

# Utility stuff
structopt = "0.3"
pretty_env_logger = "0.3"
chrono = "0.4"
lazy_static = "1"
oorandom = "11"

[dev-dependencies]
directories = "2"
rcgen = "0.7"
